--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -110,6 +110,22 @@
     "else:\n",
     "    print('These are all even numbers!')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00281f22-411e-4bd9-a611-2ddc16fbd97a",
+   "metadata": {},
+   "source": [
+    "### Write a program that prints the sum of the prime numbers greater than 2 and less than 1000."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3c62c7d-7b66-4aeb-92ec-29247c665797",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
